--- a/templates/streams.xml
+++ b/templates/streams.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Response>
   <Connect>
-    <Stream url="wss://mako-topical-arguably.ngrok-free.app/ws"></Stream>
+    <Stream url="wss://callgpt-parking.fly.dev/ws"></Stream>
   </Connect>
   <Pause length="40"/>
 </Response>
